[package]
name = "adhocerr"
version = "0.1.2"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yaahc/adhocerr"
homepage = "https://github.com/yaahc/adhocerr"
documentation = "https://docs.rs/adhocerr"
keywords = ["error"]
description = """
A library for the construction of efficient single use static/dynamic error types per callsite.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0.26"
